--- a/templates/add_run.html
+++ b/templates/add_run.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
     {% block head %}
-        <title> Home </title>
+        <title> Add Run </title>
     {% endblock head %}
 
     {% block content %}
