--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
     {% block head %}
-        <title>Add Run</title>
+        <title> RunnerBee </title>
     {% endblock head %}
     {% block content %}
     <div class="main-box">
@@ -14,6 +14,7 @@
                 <li>Time: {{ run.run_time }} mins</li>
                 <li>Calories: {{ run.calories_burned }} Cal</li>
                 <li><a href="{{url_for('delete_run', id=run.id)}}" onclick="return confirm('Are you sure you want to delete this entry?\nThis is irreversible.')">Delete</a></li>
+                <li><a href="{{url_for('edit_run', id=run.id)}}">Edit</a></li>
               </ul>
         </article>
         {% endfor %}
