heroku deployment changes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,7 +89,7 @@ div.main-box > h1, h2 {
 }
 /* Form Styles */
 
-input[type=text]{
+input[type=text], input[type=password]{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
