--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,23 @@
             <a href="{{url_for('index')}}">Home</a>
             <a href="{{url_for('add')}}">Add Run</a>
             <a href="{{url_for('dashboard')}}">Dashboard</a>
+            {% if current_user.is_anonymous %}
+                <a href="{{url_for('login')}}">Login</a>
+                {% else %}
+                <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
+
         </nav>
         <main>
-
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
         {% block content %}
         {% endblock content %}
 
