Added email report link, and fix'd logout route.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -37,7 +37,7 @@
     }
 </style>
 
-
+<a href="{{url_for('report')}}">Send Email Report</a>
 <div class="charts">
     <div class="chart1">
         <h3>Distance run (by date)</h3>
