--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -53,13 +53,13 @@
 <script>
   // Initialize a Line chart in the container with the ID chart1
   new Chartist.Bar('#chart-distance-date', {
-    labels: [{% for run in runs %}"{{run.date_posted.strftime('%d/%m/%Y, %H:%M')}}",{% endfor %}],
+    labels: [{% for run in runs %}"{{run.date_posted.strftime('%d/%m/%Y')}}",{% endfor %}],
     series: [[{% for run in runs %}{{run.distance}},{% endfor %}]]
   });
 
   // Initialize a Line chart in the container with the ID chart2
   new Chartist.Line('#chart-pace-date', {
-    labels: [{% for run in runs %}"{{run.date_posted.strftime('%d/%m/%Y, %H:%M')}}",{% endfor %}],
+    labels: [{% for run in runs %}"{{run.date_posted.strftime('%d/%m/%Y')}}",{% endfor %}],
     series: [[{% for run in runs %}{{run.run_time}}/{{run.distance}},{% endfor %}]]
   });
 </script>
